base/team-frontend/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-phpmyadmin
  template:
    metadata:
      labels:
        app: frontend-phpmyadmin
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 33
        fsGroup: 33
      containers:
      - name: phpmyadmin
        image: phpmyadmin:5.2-apache
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "25m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: pma-config
          mountPath: /etc/phpmyadmin/config.user.inc.php
          subPath: config.user.inc.php
      volumes:
      - name: pma-config
        configMap:
          name: phpmyadmin-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-phpmyadmin-service
spec:
  type: NodePort
  selector:
    app: frontend-phpmyadmin
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30022
