base/team-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: shift-festival
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: desiderius.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-drupal-service
            port:
              number: 80
